--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - gcc
+      - valgrind
+      - cppcheck
 install:
   - "[ $GCC = gcc ] && export GCC=gcc || true"
-  - sudo apt-get install -qq cppcheck
 script:
   - cd src/identifier
   cppcheck src/identifier.c
