--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,7 @@ addons:
 install:
   - "[ $GCC = gcc ] && export GCC=gcc || true"
 script:
-  - cd src/identifier
+  - cd src/identifier/src
+  - cppcheck identifier.c
+  - cd ..
   - make
