--- a/src/identifier/makefile
+++ b/src/identifier/makefile
@@ -43,6 +43,8 @@ CFLAGS += -Wno-unknown-pragmas
 CFLAGS += -Wstrict-prototypes
 CFLAGS += -Wundef
 CFLAGS += -Wold-style-definition
+CFLAGS += -fprofile-arcs
+CFLAGS += -ftest-coverage
 
 TARGET_BASE1=all_tests
 TARGET1 = $(TARGET_BASE1)$(TARGET_EXTENSION)
