--- a/src/identifier/makefile
+++ b/src/identifier/makefile
@@ -51,13 +51,18 @@ TARGET1 = $(TARGET_BASE1)$(TARGET_EXTENSION)
 SRC_FILES1=\
   $(UNITY_ROOT)/src/unity.c \
   $(UNITY_ROOT)/extras/fixture/src/unity_fixture.c \
-  src/identifier.c \
-  test/TestValidS.c \
-  test/TestValidF.c \
-  test/TestIdentifier.c \
-  test/test_runners/TestValidS_Runner.c \
-  test/test_runners/TestValidF_Runner.c \
-  test/test_runners/TestIdentifier_Runner.c \
+  src/xtea.c \
+  src/aes.c \
+  src/blowfish.c \
+  src/crypt.c \
+  test/TestXTEA.c \
+  test/TestAES.c \
+  test/TestBlowFish.c \
+  test/TestCrypt.c \
+  test/test_runners/TestXTEA_Runner.c \
+  test/test_runners/TestAES_Runner.c \
+  test/test_runners/TestBLOWFISH_Runner.c \
+  test/test_runners/TestCrypt_Runner.c \
   test/test_runners/all_tests.c
 INC_DIRS=-Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src
 SYMBOLS=
